--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -1,1 +1,41 @@
-/* write down the css for Carousel in this file */
+/* write your carousel css in this file */
+
+.body {
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+.title{
+    text-align: center;
+    position: relative;
+}
+
+.title1 {
+    display: inline;
+    width: 200px;
+    height: 50px;
+    background-color: rgba(255, 255, 255, 0.733);
+    font-size: 30px;
+    border-radius: 10px;
+    position: absolute;
+    top: 30%;
+    left: 30%;
+
+}
+/*  */
+.title2 {
+    display: inline;
+    width: 300px;
+    background-color: rgba(255, 255, 255, 0.733);
+    font-size: 25px;
+    border-radius: 10px;
+    position: absolute;
+    bottom: 20%;
+    left: 20%;
+}
+
+img{
+    width: 500px;
+}
